[package]
name = "gemini-server"
version = "0.1.0"
authors = ["slogemann1 <sllogemann1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
rand = "0.8.2"
chrono = "0.4"
clap = "2.33.3"